# nlbb_challenge_ml_engineer

./: Dockerfile  README.md  docker-compose.yml  nlbb_technical_challenge.ipynb  pyproject.toml
.ipynb_checkpoints/: nlbb_technical_challenge-checkpoint.ipynb
