[tool.poetry]
name = "nlbb_interview"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
pandas = "^1.4.2"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
sklearn = "^0.0"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
notebook = "^6.4.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
